--- a/libs/weimport.wxml
+++ b/libs/weimport.wxml
@@ -1,14 +1,47 @@
 <import src="wedetail.wxml" />
-<wxs src="weimport.wxs" module="wewxs" />
+<wxs module="mDot">
+  module.exports = {
+    function(i,cArray){ return i==cArray.length-1 ? '' : '、' }
+  }
+ </wxs>
 
-<template name="c-arrsel">
+<template name="c_aslist">
 <view class="weui-cell">
   <view class="weui-cell__bd">{{p}}:</view>
   <view class="weui-cell__ft">
-    <view wx:for="{{c.sName}}" wx:key="{{index}}">{{item}}{{wewxs.mDot(index,c.sName)}}</view>
+    <view wx:for="{{c.sName}}" wx:key="{{index}}">{{item}}{{mDot(index,c.sName)}}</view>
   </view>
 </view>
 </template>
+
+<template name="c_listsel">
+  <view class="weui-cell">
+    <view class="weui-cell__bd">{{p}}:</view>
+    <view class="weui-cell__ft">{{aList[c]}}</view>
+  </view>
+</template>
+
+<template name="c_arrsel">
+  <view class="weui-cell">
+    <view class="weui-cell__bd">{{p}}:</view>
+    <view class="weui-cell__ft">{{c.sName}}</view>
+  </view>
+</template>
+
+<template name="c_float">
+  <view class="weui-cell">
+    <view class="weui-cell__bd">{{p}}:</view>
+    <view class="weui-cell__ft">{{c}}</view>
+  </view>
+</template>
+
+<template name="c_number">
+  <view class="weui-cell">
+    <view class="weui-cell__bd">{{p}}:</view>
+    <view class="weui-cell__ft">{{c}}</view>
+  </view>
+</template>
+
 
 <template name="s_p">
   <view class="weui-cells__title">{{p}}:</view>
@@ -66,20 +99,6 @@
   </view>
 </template>
 
-<template name="s_dg">
-  <view class="weui-cell">
-    <view class="weui-cell__bd">{{p}}:</view>
-    <view class="weui-cell__ft">{{c}}</view>
-  </view>
-</template>
-
-<template name="s_fg">
-  <view class="weui-cell">
-    <view class="weui-cell__bd">{{p}}:</view>
-    <view class="weui-cell__ft">{{c}}</view>
-  </view>
-</template>
-
 <template name="s_chooseAd">
   <view class="weui-label">{{p}}:</view>
   <map longitude="{{c.longitude}}" latitude="{{c.latitude}}" scale="28" show-location style="width: 100%; height: 300px;"></map>
@@ -124,15 +143,8 @@
   <view class="weui-cell">
     <view class="weui-cell__bd">{{p}}:</view>
     <view class="weui-cell__ft">
-      <view wx:for="{{c}}" wx:key="{{index}}">{{ item }}{{wewxs.mDot(index,c)}}</view>
+      <view wx:for="{{c}}" wx:key="{{index}}">{{ item }}{{mDot(index,c)}}</view>
     </view>
-  </view>
-</template>
-
-<template name="c-listsel">
-  <view class="weui-cell">
-    <view class="weui-cell__bd">{{p}}:</view>
-    <view class="weui-cell__ft">{{c.sName}}</view>
   </view>
 </template>
 
