--- a/pages/vprocedure/vprocedure.wxml
+++ b/pages/vprocedure/vprocedure.wxml
@@ -2,7 +2,7 @@
 <view class="page" id="approval-{{pNo}}">
   <view class="page__bd page__ac_spacing">
     <block wx:for="{{reqData}}" wx:key="index">
-      <template is="s_{{item.t}}" data="{{...item, c:viewData[item.gname]}}"></template>
+      <template is="{{item.csc ? 'c_'+item.csc : 's_'+item.t}}" data="{{...item, c:vData[item.gname]}}"></template>
     </block>
   </view>
 
