--- a/inputedit/import/impedit.wxml
+++ b/inputedit/import/impedit.wxml
@@ -114,11 +114,7 @@
       <view class="weui-label">{{p}}:</view>
     </view>
     <view class="weui-cell__bd">
-<<<<<<< HEAD
       <input id="dg-{{n}}" name="{{gname}}" value="{{c}}" class="weui-input" type="{{csc}}" bindblur="f_{{func ? func : csc}}"/>
-=======
-      <input id="dg-{{n}}" name="{{gname}}" value="{{c}}" class="weui-input" type="{{csc}}" bindblur="f_{{func: func : csc}}"/>
->>>>>>> 73d0481123a594e248fe4f76b0c8fb58f01e9602
     </view>
   </view>
 </template>
@@ -138,7 +134,7 @@
 <template name="i_chooseAd">
   <view id="ac-{{n}}" bindtap="i_chooseAd">
   <view class="weui-label">{{p}}:</view>
-    <map longitude="{{c.longitude}}" latitude="{{c.latitude}}" scale="28" show-location style="width: 100%; height: 300px;"></map>
+    <map longitude="{{c.longitude}}" latitude="{{c.latitude}}" scale="18" show-location style="width: 100%; height: 300px;"></map>
   </view>
 </template>
 
@@ -148,15 +144,9 @@
       <view class="weui-cell__hd">
         <view class="weui-label">{{p}}:</view>
       </view>
-<<<<<<< HEAD
       <view class="weui-cell__bd">{{c.sName}}</view>
     </navigator>
     <input hidden="true" name="{{gname}}" value="{{c}}"/>
-=======
-      <input hidden="true" name="{{gname}}" value="{{c.sName}}""/>
-    </navigator>
-    <view class="weui-cell__bd">{{c.sName}}</view>
->>>>>>> 73d0481123a594e248fe4f76b0c8fb58f01e9602
   </view>
 </template>
 
@@ -211,11 +201,12 @@
         <view class="weui-cell_link" style='display: inline-block;' id="lj-{{n}}" data-id="{{index}}" bindtap="i_arrList">{{ item }}{{wewxs.mDot(index,c)}}</view>
       </view>
     </view>
-    <view class="weui-cell__ft" id="se-{{n}}" bindtap="i_arrList"><image class="weui-media-box__thumb" src="/images/jian.png" background-size="cover"/></view>
+    <view class="weui-cell__ft"><icon id="su-{{n}}" bindtap="i_arrList" type="{{inclose ? 'download' : 'success_no_circle'}}" size="32"/></view>
   </view>
-  <view wx:if="{{fieldSelect==n}}" class="weui-cell">
+  <view hidden="{{inclose}}" class="weui-cell weui-cell_access">
+    <view class="weui-cell__hd">输入增加的内容：</view>
     <input class="weui-cell__bd" id="ai-{{n}}" bindblur="i_arrList"/>
-    <view class="weui-cell__ft"><icon id="su-{{n}}" data-ivalue="{{arrValue}}" bindtap="i_arrList" type="success" size="32"/></view>
+    <view class="weui-cell__ft"><button id="se-{{n}}" data-add="{{iValue}}" size="mini" bindtap="i_arrList">＋</button></view>
   </view>
 </template>
 
@@ -249,34 +240,26 @@
 </template>
 
 <template name="i_producttype">
-  <view class="weui-picker">
-<<<<<<< HEAD
-    <view class="weui-picker__hd weui-cell">
-      <view class="weui-cell__hd">{{p}}:</view>
-      <view class="weui-cell__bd" id="ac-{{n}}" data-ca="{{wewxs.glist(indlist,aVl,2)}}" data-sa="{{apdv['s'+wewxs.glist(indlist,aVl,2)]}}" bindtap="f_arrsel">{{inclose ? c.sName : apdv['s'+wewxs.glist(indlist,aVl,2)] }}</view>
-      <view hideen="{{inclose}}" class="weui-cell__ft"><image src="{{item}}"/></view>
-=======
-    <view class="weui-picker__hd">
-    <view class="weui-cell">
-      <view class="weui-cell__hd">{{p}}:</view>
-      <view class="weui-cell__bd" id="ac-{{n}}" data-ca="{{wewxs.glist(indlist,aVl,2))]}}" data-sa="{{apdv['s'+wewxs.glist(indlist,aVl,2))]}}" bindtap="f_arrsel">{{inclose ? c.sName : apdv['s'+wewxs.glist(indlist,aVl,2))] }}</view>
-      <view wx:if="{{! inclose}}" class="weui-cell__ft"><image src="{{item}}"></image>
->>>>>>> 73d0481123a594e248fe4f76b0c8fb58f01e9602
+  <view class="weui-cell">
+    <view class="weui-cell__hd">{{p}}:</view>
+    <view id="ac-{{n}}" data-ca="{{wewxs.glist(indlist,aVl,2)}}" data-sa="{{apdv['s'+wewxs.glist(indlist,aVl,2)]}}" bindtap="f_arrsel">
+      <view class="weui-cell__bd" >{{inclose ? c.sName : apdv['s'+wewxs.glist(indlist,aVl,2)] }}
+      <image hidden="{{inclose}}" style="width: 78rpx; height: 32rpx; align: rigth;" src="../../images/quedin.png"/></view>
     </view>
-    <view hidden="true"><input name="{{gname}}" value="{{c}}"/></view>
-    <view hidden="{{inclose}}" class="weui-picker__bd">
-      <picker-view id="pa-{{n}}" indicator-class="weui-picker__indicator" mask-class="weui-picker__mask" value="{{aVl}}" bindchange="f_arrsel">
-          <picker-view-column>
-              <view wx:for="{{indlist}}" wx:key="{{index}}" style="line-width: 30%">{{apdv['s'+item]}}</view>
-          </picker-view-column>
-          <picker-view-column>
-              <view wx:for="{{wewxs.glist(indlist,aVl,0)}}" wx:key="{{index}}" style="line-width: 30%">{{apdv['s'+item]}}</view>
-          </picker-view-column>
-          <picker-view-column>
-              <view wx:for="{{wewxs.glist(indlist,aVl,1)}}" wx:key="{{index}}" style="line-width: 30%">{{apdv['s'+item]}}</view>
-          </picker-view-column>
-      </picker-view>
-    </view>
+  </view>
+  <view hidden="true"><input name="{{gname}}" value="{{c}}"/></view>
+  <view hidden="{{inclose}}">
+    <picker-view id="pa-{{n}}" class="weui-picker__view" indicator-class="weui-picker__indicator" mask-class="weui-picker__mask" value="{{aVl}}" bindchange="f_arrsel">
+        <picker-view-column>
+            <view wx:for="{{indlist}}" wx:key="{{index}}">{{apdv['s'+item]}}</view>
+        </picker-view-column>
+        <picker-view-column>
+            <view wx:for="{{wewxs.glist(indlist,aVl,0)}}" wx:key="{{index}}">{{apdv['s'+item]}}</view>
+        </picker-view-column>
+        <picker-view-column>
+            <view wx:for="{{wewxs.glist(indlist,aVl,1)}}" wx:key="{{index}}">{{apdv['s'+item]}}</view>
+        </picker-view-column>
+    </picker-view>
   </view>
 </template>
 
@@ -307,16 +290,11 @@
     <view class="weui-cell__hd">{{p}}:</view>
     <view class="weui-cell__bd">{{ inclose ? c.sName : objects[sId].surface[aVl[0]]+objects[sId].size[aVl[1]]+objects[sId].weight[aVl[2]] }}</view>
     <view hidden="true"><input name="{{gname}}" value="{{c}}"/></view>
-<<<<<<< HEAD
     <icon class="weui-cell__ft" id="ac-{{n}}" data-ca="{{aVl[0]+''+aVl[1]+aVl[2]}}" data-sa="{{objects[sId].surface[aVl[0]]+objects[sId].size[aVl[1]]+objects[sId].weight[aVl[2]]}}" bindtap="f_arrsel" type="{{inclose ? 'download' : 'success'}}" size="32"/>
-=======
-    <icon class="weui-cell__ft" id="ac-{{n}}" data-ca="{{''+aVl[0]]+aVl[1]+aVl[2]}}" data-sa="{{objects[sId].surface[aVl[0]]+objects[sId].size[aVl[1]]+objects[sId].weight[aVl[2]]}}" bindtap="f_arrsel" type="{{inclose ? 'download' : 'success'}}" size="32"/>
->>>>>>> 73d0481123a594e248fe4f76b0c8fb58f01e9602
   </view>
   <view hidden="{{inclose}}">
     <picker-view id="pa-{{n}}" indicator-style="height: 40rpx;" style="width: 100%; height: 300rpx;" value="{{aVl}}" bindchange="f_arrsel">
         <picker-view-column>
-<<<<<<< HEAD
           <view wx:for="{{objects[sId].surface}}" wx:key="{{index}}" style="line-height: 36rpx">{{item}}</view>
         </picker-view-column>
         <picker-view-column>
@@ -324,15 +302,6 @@
         </picker-view-column>
         <picker-view-column>
           <view wx:for="{{objects[sId].weight}}" wx:key="{{index}}" style="line-height: 36rpx">{{item}}</view>
-=======
-            <view wx:for="{{objects[sId].surface}}" wx:key="{{index}}" style="line-height: 36rpx">{{item}}</view>
-        </picker-view-column>
-        <picker-view-column>
-            <view wx:for="{{objects[sId].size}}" wx:key="{{index}}" style="line-height: 36rpx">{{item}}</view>
-        </picker-view-column>
-        <picker-view-column>
-            <view wx:for="{{objects[sId].weight}}" wx:key="{{index}}" style="line-height: 36rpx">{{item}}</view>
->>>>>>> 73d0481123a594e248fe4f76b0c8fb58f01e9602
         </picker-view-column>
     </picker-view>
   </view>
