--- a/libs/weui.wxss
+++ b/libs/weui.wxss
@@ -1054,6 +1054,10 @@ icon {
   position:relative;
   height:100%;
 }
+.weui-picker__view{
+  width:100%;
+  height:560rpx;
+}
 .weui-picker__mask{
   position:absolute;
   top:0;
