--- a/inputedit/import/impedit.wxml
+++ b/inputedit/import/impedit.wxml
@@ -201,12 +201,12 @@
         <view class="weui-cell_link" style='display: inline-block;' id="lj-{{n}}" data-id="{{index}}" bindtap="i_arrList">{{ item }}{{wewxs.mDot(index,c)}}</view>
       </view>
     </view>
-    <view class="weui-cell__ft"><icon id="su-{{n}}" bindtap="i_arrList" type="{{inclose ? 'download' : 'success_no_circle'}}" size="32"/></view>
+    <view class="weui-cell__ft"><icon id="su-{{n}}" bindtap="i_arrList" type="{{inclose ? 'info' : 'success_no_circle'}}" size="32"/></view>
   </view>
   <view hidden="{{inclose}}" class="weui-cell weui-cell_access">
     <view class="weui-cell__hd">输入增加的内容：</view>
     <input class="weui-cell__bd" id="ai-{{n}}" bindblur="i_arrList"/>
-    <view class="weui-cell__ft"><button id="se-{{n}}" data-add="{{iValue}}" size="mini" bindtap="i_arrList">＋</button></view>
+    <view class="weui-cell__ft"><button id="se-{{n}}" data-add="{{iValue}}" size="mini" bindtap="i_arrList">确定</button></view>
   </view>
 </template>
 
@@ -218,14 +218,15 @@
         <view class="weui-cell_link" style='display: inline-block;' id="lj-{{n}}" data-id="{{index}}" bindtap="f_aslist">{{item}}{{wewxs.mDot(index,c.sName)}}</view>
       </view>
     </view>
-    <view class="weui-cell__ft"><icon id="se-{{n}}" bindtap="f_aslist" type="download" size="32"/></view>
+    <view class="weui-cell__ft"><icon id="se-{{n}}" bindtap="f_aslist" type="{{inclose ? 'info' : 'success_no_circle'}}" size="32"/></view>
   </view>
   <view hidden="{{inclose}}">
   <view class="weui-cell">
+    <view class="weui-cell__hd">选择类型：</view>
     <view class="weui-cell__bd">{{apdv['s'+apdclist[aVl[0]].st[aVl[1]].ct[aVl[2]]] }}</view>
-    <view class="weui-cell__ft"><icon id="su-{{n}}" data-ca="{{apdclist[aVl[0]].st[aVl[1]].ct[aVl[2]]}}" data-sa="{{apdv['s'+apdclist[aVl[0]].st[aVl[1]].ct[aVl[2]]]}}" bindtap="f_aslist" type="success" size="32"/></view>
+    <view class="weui-cell__ft"><button id="su-{{n}}" data-ca="{{apdclist[aVl[0]].st[aVl[1]].ct[aVl[2]]}}" data-sa="{{apdv['s'+apdclist[aVl[0]].st[aVl[1]].ct[aVl[2]]]}}" bindtap="f_aslist" size="mini">确定</button></view>
   </view>
-    <picker-view  id="pa-{{n}}" indicator-class="weui-picker__indicator" mask-class="weui-picker__mask" value="{{aVl}}" bindchange="f_aslist">
+    <picker-view id="pa-{{n}}" indicator-class="weui-picker__indicator" mask-class="weui-picker__mask" value="{{aVl}}" bindchange="f_aslist">
         <picker-view-column>
             <view wx:for="{{apdclist}}" wx:key="{{index}}" style="line-height: 36rpx">{{item.n}}</view>
         </picker-view-column>
@@ -242,9 +243,9 @@
 <template name="i_producttype">
   <view class="weui-cell">
     <view class="weui-cell__hd">{{p}}:</view>
-    <view id="ac-{{n}}" data-ca="{{wewxs.glist(indlist,aVl,2)}}" data-sa="{{apdv['s'+wewxs.glist(indlist,aVl,2)]}}" bindtap="f_arrsel">
-      <view class="weui-cell__bd" >{{inclose ? c.sName : apdv['s'+wewxs.glist(indlist,aVl,2)] }}
-      <image hidden="{{inclose}}" style="width: 78rpx; height: 32rpx; align: rigth;" src="../../images/quedin.png"/></view>
+    <view class="weui-cell__bd" id="se-{{n}}" bindtap="f_arrsel">{{inclose ? c.sName : apdv['s'+wewxs.glist(indlist,aVl,2)] }}</view>
+    <view hidden="{{inclose}}" class="weui-cell__ft">
+      <button id="ac-{{n}}" data-ca="{{wewxs.glist(indlist,aVl,2)}}" data-sa="{{apdv['s'+wewxs.glist(indlist,aVl,2)]}}" size="mini" bindtap="f_arrsel">确定</button>
     </view>
   </view>
   <view hidden="true"><input name="{{gname}}" value="{{c}}"/></view>
@@ -266,12 +267,14 @@
 <template name="i_assettype">
   <view class="weui-cell">
     <view class="weui-cell__hd">{{p}}:</view>
-    <view class="weui-cell__bd">{{inclose ? c.sName : assv['a'+assclist[aVl[0]].st[aVl[1]].ct[aVl[2]] ]}} </view>
-    <view hidden="true"><input name="{{gname}}" value="{{c}}" /></view>
-    <icon class="weui-cell__ft" id="ac-{{n}}" data-cassv="{{assclist[aVl[0]].st[aVl[1]].ct[aVl[2]]}}" data-sassv="{{assv['s'+assclist[aVl[0]].st[aVl[1]].ct[aVl[2]]]}}" bindtap="f_arrsel" type="{{inclose ? 'download' : 'success'}}" size="32"/>
+    <view class="weui-cell__bd" id="se-{{n}}" bindtap="f_arrsel">{{inclose ? c.sName : assv['a'+assclist[aVl[0]].st[aVl[1]].ct[aVl[2]] ]}} </view>
+    <view hidden="{{inclose}}" class="weui-cell__ft">
+      <button id="ac-{{n}}" id="ac-{{n}}" data-ca="{{assclist[aVl[0]].st[aVl[1]].ct[aVl[2]]}}" data-sa="{{assv['s'+assclist[aVl[0]].st[aVl[1]].ct[aVl[2]]]}}" size="mini" bindtap="f_arrsel">确定</button>
+    </view>
   </view>
+  <view hidden="true"><input name="{{gname}}" value="{{c}}" /></view>
   <view hidden="{{inclose}}">
-    <picker-view id="pa-{{n}}" indicator-style="height: 40rpx;" style="width: 100%; height: 300rpx;" value="{{aVl}}" bindchange="f_arrsel">
+    <picker-view id="pa-{{n}}" class="weui-picker__view" indicator-class="weui-picker__indicator" mask-class="weui-picker__mask" value="{{aVl}}" bindchange="f_arrsel">
       <picker-view-column>
           <view wx:for="{{assclist}}" wx:key="{{index}}" style="line-height: 36rpx">{{item.n}}</view>
       </picker-view-column>
@@ -288,12 +291,14 @@
 <template name="i_arrplus">
   <view class="weui-cell">
     <view class="weui-cell__hd">{{p}}:</view>
-    <view class="weui-cell__bd">{{ inclose ? c.sName : objects[sId].surface[aVl[0]]+objects[sId].size[aVl[1]]+objects[sId].weight[aVl[2]] }}</view>
-    <view hidden="true"><input name="{{gname}}" value="{{c}}"/></view>
-    <icon class="weui-cell__ft" id="ac-{{n}}" data-ca="{{aVl[0]+''+aVl[1]+aVl[2]}}" data-sa="{{objects[sId].surface[aVl[0]]+objects[sId].size[aVl[1]]+objects[sId].weight[aVl[2]]}}" bindtap="f_arrsel" type="{{inclose ? 'download' : 'success'}}" size="32"/>
+    <view class="weui-cell__bd" id="se-{{n}}" bindtap="f_arrsel">{{ inclose ? c.sName : objects[sId].surface[aVl[0]]+objects[sId].size[aVl[1]]+objects[sId].weight[aVl[2]] }}</view>
+    <view hidden="{{inclose}}" class="weui-cell__ft">
+      <button id="ac-{{n}}" data-ca="{{aVl[0]+''+aVl[1]+aVl[2]}}" data-sa="{{objects[sId].surface[aVl[0]]+objects[sId].size[aVl[1]]+objects[sId].weight[aVl[2]]}}" bindtap="f_arrsel" size="mini">>确定</button>
+    </view>
   </view>
+  <view hidden="true"><input name="{{gname}}" value="{{c}}"/></view>
   <view hidden="{{inclose}}">
-    <picker-view id="pa-{{n}}" indicator-style="height: 40rpx;" style="width: 100%; height: 300rpx;" value="{{aVl}}" bindchange="f_arrsel">
+    <picker-view id="pa-{{n}}" class="weui-picker__view" indicator-class="weui-picker__indicator" mask-class="weui-picker__mask" value="{{aVl}}" bindchange="f_arrsel">
         <picker-view-column>
           <view wx:for="{{objects[sId].surface}}" wx:key="{{index}}" style="line-height: 36rpx">{{item}}</view>
         </picker-view-column>
