--- a/inputedit/import/impedit.wxml
+++ b/inputedit/import/impedit.wxml
@@ -327,17 +327,19 @@
 <template name="i_sObject">
   <view class="weui-cell">
     <view class="weui-cell__hd">{{p}}:</view>
-    <view class="weui-cell__bd">{{ad[c ? c : cargoObject[provalue[0]][provalue[1]] ]}} </view>
-    <view hidden="true"><input name="{{gname}}" value="{{c ? c : mD[provalue[0]][provalue[1]]}}" /></view>
-    <icon class="weui-cell__ft" id="ac-{{n}}" bindtap="f_objsel" type="search" size="32"/>
+    <view class="weui-cell__bd" id="se-{{n}}" bindtap="f_objsel">{{slave[inclose ? c : objarr[osv[0]].slaveId[osv[1]]]}} </view>
+    <view hidden="{{inclose}}" class="weui-cell__ft">
+      <button id="ac-{{n}}" data-ca="{{objarr[osv[0]].slaveId[osv[1]]}}" bindtap="f_objsel" size="mini">>确定</button>
+    </view>
   </view>
+  <view hidden="true"><input name="{{gname}}" value="{{c}}" /></view>
   <view hidden="{{inclose}}">
-    <picker-view id="pa-{{n}}" indicator-style="height: 40rpx;" style="width: 100%; height: 300rpx;" value="{{provalue}}" bindchange="s_objsel">
+    <picker-view id="pa-{{n}}" indicator-style="height: 40rpx;" style="width: 100%; height: 300rpx;" value="{{osv}}" bindchange="s_objsel">
       <picker-view-column>
-          <view wx:for="{{proSelCargo}}" wx:key="{{index}}" style="line-height: 36rpx">{{item.product}}</view>
+          <view wx:for="{{objarr}}" wx:key="{{index}}" style="line-height: 36rpx">{{master[item.masterId]}}</view>
       </picker-view-column>
       <picker-view-column>
-          <view wx:for="{{proSelCargo[provalue[0]].cargo}}" wx:key="{{index}}" style="line-height: 36rpx">{{cargoObject[item]}}</view>
+          <view wx:for="{{objarr[osv[0]].slaveId}}" wx:key="{{index}}" style="line-height: 36rpx">{{slave[item]}}</view>
       </picker-view-column>
     </picker-view>
   </view>
