--- a/pages/vprocedure/vprocedure.wxml
+++ b/pages/vprocedure/vprocedure.wxml
@@ -1,5 +1,5 @@
 <import src="../../libs/weimport.wxml" />
-<view class="page" id="approval-{{pNo}}">
+<view class="page">
   <view class="page__bd page__ac_spacing">
     <block wx:for="{{reqData}}" wx:key="index">
       <template is="{{item.csc ? 'c_'+item.csc : 's_'+item.t}}" data="{{...item, c:vData[item.gname]}}"></template>
