--- a/index/production/production.wxml
+++ b/index/production/production.wxml
@@ -8,18 +8,27 @@
     <template is="showgrids" data="{{grids}}"/>
   </view>
   <view class="weui-tab">
-  <block wx:for="{{mPage}}" wx:key="{{index}}">
-    <navigator url="/page/vprocedure/vprocedure?pNo={{pNo}}&artId={{item}}">
-      <view class="weui-media-box weui-media-box_appmsg" hover="true" hover-class="weui-cell_active">
-        <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
-          <image class="weui-media-box__thumb" src="{{pageData[item].thumbnail}}" background-size="cover"></image>
-        </view>
-        <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
-          <view class="weui-media-box__title">{{pageData[item].uName}}</view>
-          <view class="weui-media-box__desc">产量{{pageData[item].yield}},库存{{pageData[item].cargoStock}}</view>
+    <block wx:for="{{mPage}}" wx:key="{{index}}" wx:for-item="ac">
+      <view class="weui-cells">
+        <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" id="{{ac}}" bindtap="indexClick">
+          <template is="{{ iClicked==ac ? 'selecticon1' : 'selecticon2'}}" />
+          <view class="weui-cell">{{pageData[ac].uName}}</view>
+          <view class="weui-cell">产量{{mSum[ac][0]}}份,库存{{mSum[ac][0]}}份</view>
         </view>
       </view>
-    </navigator>
-  </block>
+      <view hidden="{{iClicked!=ac}}" wx:for="{{cargo[ac].cargo}}" wx:key="{{index}}">
+        <navigator url="/page/vprocedure/vprocedure?pNo={{pNo}}&artId={{item}}">
+          <view class="weui-media-box weui-media-box_appmsg" hover="true" hover-class="weui-cell_active">
+            <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
+              <image class="weui-media-box__thumb" src="{{cargo[item].thumbnail}}" background-size="cover"></image>
+            </view>
+            <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
+              <view class="weui-media-box__title">{{cargo[item].uName}}</view>
+              <view class="weui-media-box__desc">产量{{cargo[item].yield}},库存{{cargo[item].cargoStock}}</view>
+            </view>
+          </view>
+        </navigator>
+      </view>
+    </block>
   </view>
 </view>
